# sha1

./: .gitignore  LICENSE  Makefile.in  README  configure.ac
src/: sha1.cpp  sha1.h  sha1_loc.h
tests/: sha1_t.cpp
